# DSC-291-RL-Project

./: README.md  pyproject.toml
presentation/: presentation.py  speaking_notes.md
presentation/__marimo__/session/: presentation.py.json
results/: config.pkl
results/cache/: interactions_n100_min20_seed42.pkl
scripts/: run_experiment.py
src/: baselines.py  data_loader.py  environment.py  evaluation.py  feature_engineering.py
src/bandits/: __init__.py  base.py  epsilon_greedy.py  linucb.py  thompson_sampling.py
