[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "pymupdf>=1.27.1",
    "ruff>=0.15.4",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
